data/all_generated_tests/raw_wast_tests/br_if_InvalidorInconsistentControlFlowGraph_1725.wast
;; 6. **Non-integer Condition**:    - **Description**: Use `br_if` with a condition that is not an integer, which could create inconsistencies in how branches are taken or skipped.    - **Constraint**: Operand type verification.    - **CFG Impact**: Lack of proper condition evaluation may lead to unpredictable control flows in the CFG.

(assert_invalid
  (module (func $non_integer_condition
    (block (br_if 0 (f32.const 0.0)))
  ))
  "type mismatch"
)